# nonebot_plugin_YouTube

./: README.md  pyproject.toml
nonebot_plugin_YouTube/: __init__  __init__.py
